# tracely

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yml
examples/: interceptors_examples.py  openai_manual_tracing.py
tracely/src/tracely/: __init__.py  _context.py  _env.py  _runtime_context.py  _tracer_provider.py  _version.py  context.py  decorators.py  evidently_cloud_client.py  evidently_oss_client.py  interceptors.py  proxy.py
tracely/tests/: test_interceptors.py  test_spans.py
